all restaurants endpoint defined
