# restaurant/views/restaurant.py
@@ -1,5 +1,5 @@
 import connexion
-from database import db_session, Restaurant, Table 
+from database import db_session, Restaurant, Table, RestaurantDeleted
 from flask import request, jsonify, abort, make_response
 import json
 
@@ -26,8 +26,36 @@ def create_restaurant():
 
 
 def get_restaurants():  
+    q = db_session.query(Table).all()
+    print('TABLE LEN: ', len(q))
+    q = db_session.query(RestaurantDeleted).all()
+    print('RestaurantDeleted LEN: ', len(q))
+    for r in q:
+        print(r.serialize())
+
     q = db_session.query(Restaurant).all()
     return [p.serialize() for p in q]
+
+
+def delete_restaurants():
+    request_dict = request.json
+
+    restaurants = db_session.query(Restaurant).filter(Restaurant.owner_id == request_dict['owner_id']).all()
+    
+    if len(restaurants) > 0:
+        for restaurant in restaurants:
+            # update table RestaurantDeleted to ensure that the likes, reviews and  
+            # reservations relating to the restaurant are deleted asynchronously
+            restaurant_deleted = RestaurantDeleted()
+            restaurant_deleted.id = restaurant.id
+            db_session.add(restaurant_deleted)
+
+            # dishes, working days and tables are deleted on cascade
+            db_session.delete(restaurant)
+        
+        db_session.commit()
+
+    return 'Restaurants successfully deleted'
 
 
 def get_restaurant(restaurant_id):
@@ -44,6 +72,9 @@ def edit_restaurant(restaurant_id):
     
     if restaurant is None:
         return connexion.problem(404, "Not found", "There is no restaurant with the specified id")
+
+    if restaurant.owner_id != request_dict['owner_id']:
+        return connexion.problem(403, "Forbidden", "Specified owner_id is not the restaurant owner")
 
     tables = request_dict.pop('tables', None)
     if tables is not None:
@@ -64,3 +95,26 @@ def edit_restaurant(restaurant_id):
     db_session.commit()
 
     return 'Restaurant successfully edited'
+
+
+def delete_restaurant(restaurant_id):
+    request_dict = request.json
+    restaurant = db_session.query(Restaurant).filter(Restaurant.id == restaurant_id).first()
+    
+    if restaurant is None:
+        return connexion.problem(404, "Not found", "There is no restaurant with the specified id")
+
+    if restaurant.owner_id != request_dict['owner_id']:
+        return connexion.problem(403, "Forbidden", "Specified owner_id is not the restaurant owner")
+
+    # update table RestaurantDeleted to ensure that the likes, reviews and  
+    # reservations relating to the restaurant are deleted asynchronously
+    restaurant_deleted = RestaurantDeleted()
+    restaurant_deleted.id = restaurant_id
+    db_session.add(restaurant_deleted)
+
+    # dishes, working days and tables are deleted on cascade
+    db_session.delete(restaurant)
+    db_session.commit()
+
+    return 'Restaurant successfully deleted'
